css/styles.css
/* ... */
.image p {
	position: absolute;
	background-color: rgba(255,139,4, 0.7); 
	top: 23%;
	left: 56%;
	width: 41.5%;
	height: 34%;
	overflow-wrap: break-word; 
	color: white;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 20px;
    padding: 10px;
}

.image-container {
	position: relative;
	width: 100%;
}

.image-join p {
	position: absolute;
	background-color: rgba(255,139,4, 0.7); 
	overflow-wrap: break-word; 
	color: white;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 16px;
    padding: 10px;
    top: 12%;
    left: 58%;
}

.image-join img {
	height: 95px;
	width: 117px;
}

.info {
	background-color: rgb(33,120,128);
	color: white;
	width: 5.5%;
	height: 4%;
	padding: 1%;
	text-decoration: none; 
	font-family: arial, sans-serif;
	text-transform: uppercase;
	margin-left: 25%;
	position: absolute;
	top: 64%;
	left: 48%;
	font-size: 16px;
	font-weight: 900;
}

.join {
 	background-color: rgba(255,139,4, 0.7);
 	margin-right: 25%;
 	margin-left: 25%; 
 }

 .join-pros {
 	display: flex;
 	justify-content: space-around;
 	flex-direction: row;
  }

.links {
	padding: 10px;
	color: rgb(33,120,128);
	text-transform: uppercase;
	font-size: 12px;
	font-family: arial, sans-serif;
	font-weight: 400;
}

.links-bottom {
	padding: 10px;
	color: rgb(33,120,128);
	text-transform: uppercase;
	font-size: 12px;
	font-family: arial, sans-serif;
	font-weight: 400;
	display: flex;
	justify-content: space-around;
	margin-left: 25%;
	margin-right: 25%;
}

.links a, .links-bottom a {
	color: rgb(33,120,128); 
	text-decoration: none;
}

.links a:visited, .links-bottom a:visited {
	color: rgb(33,120,128);
	text-decoration: none;
}

.links, .links-bottom a:hover {
	color: lightgray;
}

#login, #login a:visited {
	color: rgb(253,139,4);
	font-weight: 600;
}

.login-form input {
	padding: 5px;
    border: 5px;
    border-color: black;
    width: 30%;
    margin-bottom: 5%;
    background-color: lightgrey;
   	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	text-align: left;
	font-size: 14px;
}

.login-form {
	margin-left: 35%;
	margin-bottom: 9%;
}

.login-form a {
	color: #0000FF;
    text-decoration: underline;
}

.logo img {
	height: 103%;
	width: 39%;
}

.main-block {
	display: flex;
	align-content: space-around;
}

.main-block {
	display: flex;
	justify-content: center;
}

.main-block input {
	background-color: lightgray;
	margin-top: 23px;
	margin-bottom: 15px;
	height: 26%;
	padding-bottom: 1%;
	color: black;
	display: inline-flex;
}

.main-block img {
	height: 5%;
	width: 5%;
	margin-top: 21px;
	margin-bottom: 15px;
}

.main-img {
	width: 100%;
}

.overlay-text {
	position: relative; 
	top: -10px; 
	z-index: 3;
	background-color: pink;
}

.paragraph {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	text-align: left;
	font-size: 16	px;
	word-wrap: break-word;
	line-height: 180%;
}

.password {
	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
    color: #6B6B6B;
    margin-left: 25%;
    margin-right: 25%;
    font-size: 14px;
    line-height: 25px;
}

.payment {
	text-transform: uppercase;
	justify-content: flex-start;
	display: flex;
	margin-right: 25%;
	margin-left: 25%;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	font-size: 12px;	
	word-wrap: break-word;
}

.payment-info {
	justify-content: flex-start;
	display: flex;
	margin-right: 25%;
	margin-left: 25%;
	font-size: 12px;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
}

.pros {
	display: flex;
	margin-top: 30%;
	margin-left: 10%;
}

.pros2 {
	display: flex;
	margin: 10%;
}

.pros img, .pros2 img {
	height: 151px;
	width: 151px;
}

.pro-company {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    text-align: left;
    font-size: 14px;
    line-height: 17px;
    word-wrap: break-word;
}

.pro-email, .pro-email a {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    text-align: left;
    font-size: 14px;
    line-height: 17px;
    word-wrap: break-word;
    color: #0000FF;
}

.pro-name, .pro-name a {
	color: #0000FF;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    text-align: left;
    font-size: 25px;
    word-wrap: break-word;
    text-decoration: none;
}

.pro-name a:clicked, .pro-email a:clicked {
	color: #800080;
	text-decoration: none;
}


.profile {
	display: flex;
	margin-left: 5%;
}

.questions {
	background-color: rgba( 253,139,4,0.7);
	height: 149px;
	width: 561px;
	margin-right: -10000px;
	position: relative;
}

.rsvp {
	background-color: rgb(33,120,128);
	color: white;
	width: 15%;
	height: 8%;
	padding: 1.5%;
	text-decoration: none; 
	font-family: Geneva, Verdana, Lucida Sans, Lucida Sans Unicode, sans-serif;
	text-transform: uppercase;
	margin-left: 25%;
}

.rsvp a:clicked {
	text-decoration: none;
}

.search-box {
	color: rgb(33,120,128);
	background-color: lightgrey;
}

.signin {
	color: #fff;
    background-color: #337ab7;
    border-color: #2e6da4;
}

.slideshow {
	display: flex;
	align-items: center;
	padding-left: 25%;
	width: 50%;
}

.social {
	display: flex;
	justify-content: flex-end;

}

.social-logos {
	height: 46px;
	width: 46px;
}

.space {
	padding-right: 15px;
	padding-left: 15px;
}

.spider-logo-bottom {
	padding-left: 35%;
	padding-right: 35%;
	height: 24%;
	width: 33%;
}

.sponsers {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-content: center;
	justify-content: space-around;
	padding-left: 20%;
	padding-right: 20%;
}

.starthere {
  	background-color: rgb(33,120,128);
  	color: white;
 	width: 5.5%;
 	height: 4%;
 	padding: 1%;
 	width: 18.5%;
 	height: 41%;
 	padding: 2%;
  	font-family: arial, sans-serif;
  	text-transform: uppercase;
 	margin-left: 25%;
  	font-size: 16px;
  	font-weight: 900;
 	text-decoration: none;
 	margin-top: 2%;
 }

 .starthere a, .starthere a:clicked {
  	text-decoration: none; 
 	color: white;
  }

.submit {
	font: 13.3333px Arial;
	margin-right: 20%;
	margin-top: 1%;
}

ul {
	list-style: none;
}
/* ... */

